/* $Id$ */

2006-09-16:
    - src/gmake:
        o Cleaning up the modifications. Changes are now either configurable 
          or marked, and dead stuff has been removed (dll shell).

2006-09-15:
    - kBuild/bin/x86.win32/kmk.exe:
        o Built new code.
    - kBuild/header.kmk:
        o DIRDEP is now the same on all platforms (fixed with 3.81 merge).
    - kBuild/bin/x86.linux/kmk:
        o Built new code on system360.
    - src/gmake:
        o Some parallel job fixes.
        o Regenerated config.h.linux on system360.
        o Fixed stat("dir/", &st) on windows and some warnings.
        o Merge with GNU Make v3.81 (vendor/gnumake/2005-05-16 -> vendor/gnumake/current).

2006-03-26:
    - kBuild/bin/x86.os2/:
        o Rebuilt the OS/2 tools.
    - src/gmake/variable.c, src/gmake/variable.h, src/gmake/make.h:
        o Attempt at speeding up performance on OS/2.
    - src/gmake/kmkbuiltin/rm.c:
        o OS/2 wants -R.
    - src/gmake/read.c:
        o Don't call glob() unless there is a wildcard pattern in the name.
          This speed things up a bit, at least on FreeBSD and especially on OS/2.
    - Config.kmk:
        o Added -pg for profile builds on OS/2.

2006-02-22: bird
    - kBuild/tools/MINGW32.kmk:
        o Corrected dependencies to match those generated by GCC3.

2006-02-09: bird
    - kBuild/tools/YASM.kmk:
        o Initial config.

2006-01-20: bird
    - kBuild/footer.kmk, kBuild/header.kmk:
        o Check for PACKING.$(BUILD_TARGET) as well. Added a quick evaluation
          of PACKING[.*] in the footer.

2006-01-18: bird
    - kBuild/footer.kmk, kBuild/header.kmk:
        o Packing pass change - uses PACKING var instead of packing::.
    - kBuild/footer.kmk:
        o Added mode,uid and gid to file INSTALLS.
        o Implemented template inheritance (_EXTENDS).

2006-01-14: bird
    - kBuild/env.sh:
        o Corrected the tool list.
    - kBuild/bin/x86.linux/:
        o Rebuild with current tree and static linage. (rhel3)